--- a/css/style.css
+++ b/css/style.css
@@ -7201,10 +7201,8 @@ nav.navbar {
   background-repeat: no-repeat;
   background-size: cover; }
 
-.hero svg {
-  z-index: -100;
-  position: absolute;
-  filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.2)); }
+.hero-heading {
+  margin: 1.5rem 0; }
 
 .pop-info .container {
   position: relative;
