--- a/sass/style.sass
+++ b/sass/style.sass
@@ -73,10 +73,9 @@ nav.navbar
   background-repeat: no-repeat
   background-size: cover
 
-.hero svg
-  z-index: -100
-  position: absolute
-  filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.2))
+.hero-heading
+  margin: 1.5rem 0
+
 
 //pop-info
 .pop-info .container
