--- a/sass/style.sass
+++ b/sass/style.sass
@@ -108,31 +108,32 @@ nav.navbar
 
 
 //event-info
-.event-info .card-body > h3
-  font-weight: bold
+.event-info .card-body
+  >h3
+    font-weight: bold
 
-.event-info .card-body > ul
-  display: inline-block
-  line-height: 1.5em
-  list-style-image: url('../images/icon-checked.svg')
-
+  >ul
+    display: inline-block
+    line-height: 1.7em
+    list-style-type: none
 
 //event-location
 .event-location
   padding-bottom: 8rem
 
-.event-location .list-group-item
-  background: transparent
-  border: 0
+  .list-group-item
+    display: inline
+    background: transparent
+    border: 0
 
-  h4
-    letter-spacing: 2px
-    color: var(--primary)
-    font-weight: bold
-    border: 2px solid var(--primary)
-    padding: .2rem .5rem
-    margin-right: 1rem
-    display: inline-block
+    h4
+      letter-spacing: 2px
+      color: var(--primary)
+      font-weight: bold
+      border: 2px solid var(--primary)
+      padding: .2rem .5rem
+      margin-right: 1rem
+      display: inline-block
 
 //event-join
 .signup-form
@@ -148,12 +149,19 @@ nav.navbar
 .page-footer
   border-top: 5px solid var(--light)
 
+.footer-info
+  font-size: 14px
+
 .copyright
   border-top: 1px solid var(--gray)
 
 //
 //bootstrap item overwrite
 //
+
+//btn
+.btn-primary
+  background-color: var(--primary)
 
 //cards
 .card
