--- a/css/style.css
+++ b/css/style.css
@@ -7192,6 +7192,7 @@ nav.navbar {
   padding-right: 1rem; }
 
 .hero {
+  min-height: 100vh;
   overflow: hidden;
   position: relative;
   margin-top: 90px;
