--- a/css/style.css
+++ b/css/style.css
@@ -7183,6 +7183,7 @@ body {
 
 nav.navbar {
   margin: 0 auto;
+  background: #0083c2;
   background: var(--primary); }
 
 .navbar-brand {
@@ -7191,8 +7192,11 @@ nav.navbar {
 .navbar-nav li {
   padding-right: 1rem; }
 
+.navbar-nav a {
+  color: white; }
+
 .hero {
-  min-height: 130vh;
+  height: 100vh;
   overflow: hidden;
   position: relative;
   margin-top: 90px;
@@ -7206,8 +7210,7 @@ nav.navbar {
   margin: 1.2rem 0; }
 
 .pop-info .container {
-  position: relative;
-  margin-top: -5%; }
+  position: relative; }
 
 .pop-info-box span {
   color: #fcee21; }
@@ -7225,6 +7228,7 @@ nav.navbar {
   height: 0;
   border-left: 1.5rem solid transparent;
   border-right: 1.5rem solid transparent;
+  border-top: 1.5rem solid #0083c2;
   border-top: 1.5rem solid var(--primary);
   position: absolute;
   bottom: -1.5rem;
@@ -7246,8 +7250,10 @@ nav.navbar {
     border: 0; }
     .event-location .list-group-item h4 {
       letter-spacing: 2px;
+      color: #0083c2;
       color: var(--primary);
       font-weight: bold;
+      border: 2px solid #0083c2;
       border: 2px solid var(--primary);
       padding: .2rem .5rem;
       margin-right: 1rem;
@@ -7269,6 +7275,7 @@ nav.navbar {
   border-top: 1px solid var(--gray); }
 
 .btn-primary {
+  background-color: #0083c2;
   background-color: var(--primary); }
 
 .card {
