--- a/css/style.css
+++ b/css/style.css
@@ -7196,11 +7196,11 @@ nav.navbar {
   color: white; }
 
 .hero {
-  height: 100vh;
+  min-height: 100vh;
   overflow: hidden;
   position: relative;
   margin-top: 90px;
-  padding-top: 5rem;
+  padding: 5rem 0;
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.4) 100%), url("../images/hero.jpg");
   background-position: center;
   background-repeat: no-repeat;
