--- a/sass/style.sass
+++ b/sass/style.sass
@@ -69,11 +69,11 @@ nav.navbar
 
 // header
 .hero
-  height: 100vh
+  min-height: 100vh
   overflow: hidden
   position: relative
   margin-top: 90px
-  padding-top: 5rem
+  padding: 5rem 0
   background: linear-gradient(to bottom, rgba(256, 256, 256, 0) 0%, rgba(256, 256, 256, 0.4) 100%), url("../images/hero.jpg")
   background-position: center
   background-repeat: no-repeat
