--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,6 +2,14 @@
 //Import Bootstrap
 @import "node_modules/bootstrap/scss/bootstrap"
 
+.anchor
+  display: block
+  position: relative
+  top: -150px
+  margin-top: -50px
+  visibility: hidden
+
+
 // Redefine Bootstrap color
 $primary-color: #0083c2
 \:root
