--- a/css/style.css
+++ b/css/style.css
@@ -7138,6 +7138,13 @@ a.text-dark:hover, a.text-dark:focus {
     color: inherit;
     border-color: #dee2e6; } }
 
+.anchor {
+  display: block;
+  position: relative;
+  top: -150px;
+  margin-top: -50px;
+  visibility: hidden; }
+
 :root {
   --primary: #0083c2; }
 
