--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,12 +6,13 @@
   display: block
   position: relative
   top: -150px
-  margin-top: -50px
+  margin-top: 0px
   visibility: hidden
 
 
 // Redefine Bootstrap color
 $primary-color: #0083c2
+
 \:root
    --primary: #{$primary-color}
 
@@ -26,6 +27,7 @@ ul
   padding: 0
 
 body
+  scroll-behavior: smooth
   background-color: #f0ede8
   background-image: url("https://www.transparenttextures.com/patterns/notebook-dark.png")
   overflow-x: hidden
