--- a/css/style.css
+++ b/css/style.css
@@ -7142,7 +7142,7 @@ a.text-dark:hover, a.text-dark:focus {
   display: block;
   position: relative;
   top: -150px;
-  margin-top: -50px;
+  margin-top: 0px;
   visibility: hidden; }
 
 :root {
@@ -7158,6 +7158,7 @@ ul {
   padding: 0; }
 
 body {
+  scroll-behavior: smooth;
   background-color: #f0ede8;
   background-image: url("https://www.transparenttextures.com/patterns/notebook-dark.png");
   overflow-x: hidden;
