--- a/css/style.css
+++ b/css/style.css
@@ -7138,13 +7138,6 @@ a.text-dark:hover, a.text-dark:focus {
     color: inherit;
     border-color: #dee2e6; } }
 
-.anchor {
-  display: block;
-  position: relative;
-  top: -150px;
-  margin-top: 0px;
-  visibility: hidden; }
-
 :root {
   --primary: #0083c2; }
 
@@ -7153,6 +7146,13 @@ a.text-dark:hover, a.text-dark:focus {
 
 .text-primary {
   color: #0083c2 !important; }
+
+.anchor {
+  display: block;
+  position: relative;
+  top: -150px;
+  margin-top: 0px;
+  visibility: hidden; }
 
 ul {
   padding: 0; }
@@ -7268,6 +7268,10 @@ nav.navbar {
 
 .signup-form p {
   letter-spacing: 1px; }
+
+.signup-form .error {
+  color: #dc3545;
+  color: var(--danger); }
 
 .questions {
   padding: 5rem 0; }
