--- a/sass/style.sass
+++ b/sass/style.sass
@@ -97,8 +97,12 @@ nav.navbar
 
 
 .pop-info-box
-  span
-    color: #fcee21
+  h3
+    span
+      color: #fcee21
+
+  .detail
+    letter-spacing: 1.8px
 
   // Badge
   &::before
@@ -215,8 +219,14 @@ nav.navbar
       background: none
 
     .pop-info-box
+      h3
+        font-size: 1.3rem
+
       h2
         font-size: 2rem
+
+      .detail
+        font-size: .9rem
 
       &::before
         display: none
