--- a/sass/style.sass
+++ b/sass/style.sass
@@ -197,7 +197,7 @@ nav.navbar
 //list group
 
 
-// Card Media Rule
+//Bootstrap Card Media Rule
 @media (min-width: 576px)
   .card-columns
     column-count: 2
@@ -214,19 +214,32 @@ nav.navbar
   .card-columns
     column-count: 2
 
-@media (max-width: 770px)
+
+// If < 1200px
+@media (max-width: 1200px)
+  .pop-info-box
+
+    h2
+      font-size: 4rem
+
+    h3
+      margin-top: .5rem
+      display: block!important
+
+// If < 768px
+@media (max-width: 768px)
     .hero
       background: none
 
     .pop-info-box
       h3
-        font-size: 1.3rem
+        font-size: 1.2rem
 
       h2
-        font-size: 2rem
+        font-size: 1.9rem
 
       .detail
-        font-size: .9rem
+        font-size: .8rem
 
       &::before
         display: none
