--- a/sass/style.sass
+++ b/sass/style.sass
@@ -166,6 +166,40 @@ nav.navbar
     color: #dc3545
     color: var(--danger)
 
+  h2
+    span
+      color: #0083c2
+      color: var(--primary)
+
+//gift banner
+.gift-banner
+  padding: 5rem 0
+
+  img
+    max-height: 400px
+
+.gift-banner__box
+  position: relative
+  margin: 0 auto
+  margin-top: 3rem
+  padding: 2rem
+  max-width: 400px
+  border: 2px solid #f8f9fa
+  border: 2px solid var(--light)
+
+  h3
+    white-space: nowrap
+    padding: 0 2rem
+    position: absolute
+    top: -15%
+    left: 50%
+    transform: translateX(-50%)
+    background: #343a40
+    background: var(--dark)
+
+  h4
+    line-height: 1.5
+
 //class q-a
 .questions
   padding: 5rem 0
