--- a/css/style.css
+++ b/css/style.css
@@ -7276,6 +7276,35 @@ nav.navbar {
   color: #dc3545;
   color: var(--danger); }
 
+.signup-form h2 span {
+  color: #0083c2;
+  color: var(--primary); }
+
+.gift-banner {
+  padding: 5rem 0; }
+  .gift-banner img {
+    max-height: 400px; }
+
+.gift-banner__box {
+  position: relative;
+  margin: 0 auto;
+  margin-top: 3rem;
+  padding: 2rem;
+  max-width: 400px;
+  border: 2px solid #f8f9fa;
+  border: 2px solid var(--light); }
+  .gift-banner__box h3 {
+    white-space: nowrap;
+    padding: 0 2rem;
+    position: absolute;
+    top: -15%;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #343a40;
+    background: var(--dark); }
+  .gift-banner__box h4 {
+    line-height: 1.5; }
+
 .questions {
   padding: 5rem 0; }
 
