--- a/css/style.css
+++ b/css/style.css
@@ -7299,8 +7299,8 @@ nav.navbar {
   margin-top: 3rem;
   padding: 2rem;
   max-width: 400px;
-  border: 2px solid #f8f9fa;
-  border: 2px solid var(--light); }
+  border: 3px solid #f8f9fa;
+  border: 3px solid var(--light); }
   .gift-banner__box h3 {
     white-space: nowrap;
     padding: .3rem 2rem;
@@ -7365,4 +7365,6 @@ nav.navbar {
   .pop-info-box .detail {
     font-size: .8rem; }
   .pop-info-box::before {
+    display: none; }
+  ::before {
     display: none; } }
