--- a/sass/style.sass
+++ b/sass/style.sass
@@ -284,8 +284,9 @@ nav.navbar
     &::before
       display: none
 
+  .gift-banner
+    padding: 1rem 0
+
   .gift-banner__badge
-
-
   &::before
     display: none
