--- a/css/style.css
+++ b/css/style.css
@@ -7366,7 +7366,11 @@ nav.navbar {
     font-size: .8rem; }
   .pop-info-box::before {
     display: none; }
+  .signup-form h2 {
+    font-size: 1.7rem; }
   .gift-banner {
     padding: 1rem 0; }
+  .gift-banner__box h4 {
+    font-size: 1.3rem; }
   ::before {
     display: none; } }
