--- a/sass/style.sass
+++ b/sass/style.sass
@@ -284,8 +284,16 @@ nav.navbar
     &::before
       display: none
 
+  .signup-form
+    h2
+      font-size: 1.7rem
+
   .gift-banner
     padding: 1rem 0
+
+  .gift-banner__box
+    h4
+      font-size: 1.3rem
 
   .gift-banner__badge
   &::before
